Fix nav & recipe view alignment

--- a/client/src/components/Nav.scss
+++ b/client/src/components/Nav.scss
@@ -83,7 +83,7 @@ nav .icon {
 .right-buttons {
   position: absolute;
   top: 1rem;
-  right: 1.5rem;
+  right: 1rem;
   line-height: 1;
 }
 
