--- a/client/src/pages/recipe/Recipe.scss
+++ b/client/src/pages/recipe/Recipe.scss
@@ -59,7 +59,7 @@
 .recipe {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
 }
